--- a/account.api/src/main/resources/application-dev.properties.template
+++ b/account.api/src/main/resources/application-dev.properties.template
@@ -1,12 +1,11 @@
-falc.account.name=DevJAccount
+falc.account.name=DevJAccountH2
 falc.account.db=TEST
-falc.account.version=0.4.2adev
+falc.account.version=0.5.0adev
 falc.account.standingorder.cron=* 0 */2 * * ?
-# NORMAL (default) or SORTED
-#falc.account.transaction.listsort=SORTED
 
-spring.datasource.url=jdbc:ucanaccess://E:/Development/workspace/accountREST/acc2003_TEST.mdb
-# C:/Development/accountDB/acc2003TEST.mdb
+# Uses the DB created and populated by DatabasePopulateTest
+falc.account.db.name=accountH2create
+falc.account.db.location=./db
 
 # this causes an exception when debugging so set it to a high value
-spring.datasource.hikari.leakDetectionThreshold=1000000
+#spring.datasource.hikari.leakDetectionThreshold=1000000
